[project]
name = "comfyui-advanced-controlnet"
description = "Nodes for scheduling ControlNet strength across timesteps and batched latents, as well as applying custom weights and attention masks."
version = "1.2.3"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/Kosinkadink/ComfyUI-Advanced-ControlNet"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "kosinkadink"
DisplayName = "ComfyUI-Advanced-ControlNet"
Icon = ""
