[project]
name = "comfyui-advanced-controlnet"
description = "Nodes for scheduling ControlNet strength across timesteps and batched latents, as well as applying custom weights and attention masks."
version = "1.5.3"
license = { file = "LICENSE" }
dependencies = ["comfyui-frontend-package @ git+https://github.com/AppMana/appmana-comfyui-frontend.git#796787ffb4603e182415dbc9632160741fa29f94&subdirectory=comfyui_frontend_package"]

[project.urls]
Repository = "https://github.com/Kosinkadink/ComfyUI-Advanced-ControlNet"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "kosinkadink"
DisplayName = "ComfyUI-Advanced-ControlNet"
Icon = ""

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [ 
    "comfyui_advanced_controlnet",
    "comfyui_advanced_controlnet.adv_control",
]

[tool.setuptools.package-dir]
"comfyui_advanced_controlnet" = "."
"comfyui_advanced_controlnet.adv_control" = "adv_control"


[project.entry-points."comfyui.custom_nodes"]
comfyui_advanced_controlnet = "comfyui_advanced_controlnet"


[tool.setuptools.package-data]
"*" = ["**/*.js" ]
